Technical part finished

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1659,6 +1659,11 @@ only link against libLLVM.so and the double symbol definition is eliminated.
 \\\\
 Commit: http://lists.busybox.net/pipermail/buildroot/2018-June/222682.html
 
+\subsection*{Buildroot 2018.05}
+
+Buildroot's stable version 2018.05 was released on the $1^{st}$ June, containing
+both LLVM and Clang packages:
+http://lists.busybox.net/pipermail/buildroot/2018-June/222697.html
 
 \newpage
 \section{Future work}
